--- a/index.html
+++ b/index.html
@@ -105,9 +105,36 @@ and your loved ones are protected.</p>
           <p>Our application process can be completed in minutes, not hours. Don’t get 
   stuck filling in tedious forms.</p>
         </div>
-        
+  
       </div>
 
+      <div class="box">
+        <div class="box-img"><img src="images/icon-affordable-prices.svg" alt=""></div>
+        <div class="box-text" >
+          <h4>Affordable Prices</h4>
+          <p>We don’t want you worrying about high monthly costs. Our prices may be low, 
+  but we still offer the best coverage possible.</p>
+        </div>
+  
+      </div>
+
+      <div class="box">
+        <div class="box-img"><img src="images/icon-people-first.svg" alt=""></div>
+        <div class="box-text" >
+          <h4>People First</h4>
+          <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+  sure you’re covered when you need it.</p>
+        </div>
+  
+      </div>
+
+    </div>
+  </section>
+
+  <section>
+    <div> 
+      <div class="work-text"><h1>Find out more about how we work</h1></div>
+      <div class="work-btn"><button>How we work</button></div>
     </div>
   </section>
 
@@ -117,19 +144,17 @@ and your loved ones are protected.</p>
 
   
 
-  Affordable Prices
+  
 
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
+ 
 
-  People First
+  
 
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
 
-  Find out more about how we work
 
-  How we work
+  
+
+  
 
   Our company
 
