ädded find work section

--- a/index.html
+++ b/index.html
@@ -131,13 +131,32 @@ and your loved ones are protected.</p>
     </div>
   </section>
 
-  <section>
+  <section class="find-out-more">
+    <img src="images/bg-pattern-how-we-work-mobile.svg" alt="">
     <div> 
       <div class="work-text"><h1>Find out more about how we work</h1></div>
-      <div class="work-btn"><button>How we work</button></div>
+      <button>How we work</button>
     </div>
   </section>
 
+
+  <footer>
+    <img src="images/bg-pattern-footer-mobile.svg" alt="">
+    <div>
+      <div><img src="" alt=""></div>
+
+      <div>
+<img src="images/icon-facebook.svg" alt="">
+       <img src="images/icon-instagram.svg" alt="">
+       <img src="images/icon-pinterest.svg" alt="">
+       <img src="images/icon-twitter.svg" alt="">
+      </div>
+       
+       
+    </div>
+   
+    <hr>
+  </footer>
  
 
  
