--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ and your loved ones are protected.</p>
   <footer>
     <img src="images/bg-pattern-footer-mobile.svg" alt="">
     <div>
-      <div><img src="" alt=""></div>
+      <div><img src="images/logo.svg" alt="insure logo"></div>
 
       <div>
 <img src="images/icon-facebook.svg" alt="">
@@ -151,43 +151,45 @@ and your loved ones are protected.</p>
        <img src="images/icon-pinterest.svg" alt="">
        <img src="images/icon-twitter.svg" alt="">
       </div>
-       
-       
     </div>
    
     <hr>
+
+    <div>
+      <h4>Our company</h4>
+      <ul>
+        <li>How we work</li>
+        <li>Why Insure?</li>
+        <li>Check Price</li>
+        <li>Reviews</li>
+      </ul>
+    </div>
+
+    <div>
+      <h4>Help me</h4>
+      <ul>
+        <li>FAQ</li>
+        <li>Terms of use</li>
+        <li>Privacy policy</li>
+        <li>Cookies</li>
+      </ul>
+    </div>
   </footer>
  
 
+
+  
+
+
+  
+ 
+
  
 
   
-
   
-
- 
-
   
-
-
-
   
-
-  
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
 
   Contact
 
