--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ and your loved ones are protected.</p>
 
   <footer>
     <img src="images/bg-pattern-footer-mobile.svg" alt="">
-    <div>
+    <div class="footer-header">
       <div><img src="images/logo.svg" alt="insure logo"></div>
 
-      <div>
+      <div class="footer-header-icons">
 <img src="images/icon-facebook.svg" alt="">
        <img src="images/icon-instagram.svg" alt="">
        <img src="images/icon-pinterest.svg" alt="">
@@ -154,8 +154,8 @@ and your loved ones are protected.</p>
     </div>
    
     <hr>
-
-    <div>
+<div class="footer-content">
+    <div class="footer-content-list">
       <h4>Our company</h4>
       <ul>
         <li>How we work</li>
@@ -165,7 +165,7 @@ and your loved ones are protected.</p>
       </ul>
     </div>
 
-    <div>
+    <div class="footer-content-list">
       <h4>Help me</h4>
       <ul>
         <li>FAQ</li>
@@ -174,6 +174,8 @@ and your loved ones are protected.</p>
         <li>Cookies</li>
       </ul>
     </div>
+</div>
+
   </footer>
  
 
