--- a/index.html
+++ b/index.html
@@ -174,41 +174,37 @@ and your loved ones are protected.</p>
         <li>Cookies</li>
       </ul>
     </div>
+
+    <div class="footer-content-list">
+      <h4>Contact</h4>
+      <ul>
+        <li>FAQ</li>
+        <li>Sales</li>
+        <li>Support</li>
+        <li>Live chat</li>
+      </ul>
+    </div>
+
+    <div class="footer-content-list">
+      <h4>Others</h4>
+      <ul>
+        <li>Careers</li>
+        <li>Press</li>
+        <li>Licenses</li>
+      </ul>
+    </div>
+
+
+
 </div>
 
   </footer>
  
-
-
   
-
-
-  
- 
-
- 
-
-  
-  
-  
-  
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Funsho ajayi</a>.
   </div>
 </body>
 </html>
