--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   </div>
  
-<!-- hero images -->
+<!--pc hero images -->
         <img src="images/image-intro-desktop.jpg" alt="pc hero img">
         <img src="images/bg-pattern-intro-left-desktop.svg" alt="">
 
@@ -87,6 +87,7 @@ and your loved ones are protected.</p>
   </div>
 </section>  
 
+<!-- body content -->
  <div class="body">
 
 
