--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ and your loved ones are protected.</p>
 </section>  
 
 <!-- body content -->
- <div class="body">
+<div class="body">
+ <div class="about-body">
 
 
   <section class="about">
@@ -198,7 +199,7 @@ and your loved ones are protected.</p>
 
   </footer>
  
-  
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
